2005-02-23  Matthias Clasen  <mclasen@redhat.com>

	* io-ico.c: Fix a typo.  (#168173, Ivan Wong)

2005-02-15  Matthias Clasen  <mclasen@redhat.com>

	* io-pnm.c (pnm_skip_whitespace): Don't read over the end of
	the buffer if '#' appears at the very end.  (#167141, Doug Morgan)

2005-02-05  Hans Breuer  <hans@breuer.org>

	* makefile.msc : rule for gdk_pixbuf.def

2005-02-07  Matthias Clasen  <mclasen@redhat.com>

	* io-pnm.c (pnm_read_next_value): Pass in the max number 
	of bytes to read.
	(pnm_read_ascii_scanline): And use it here to enable 
	parsing of pbm images without whitespace between the 
	pixels.  (#165803, Samuel Hym)

2005-01-22  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-loader.c (gdk_pixbuf_loader_new_with_type) 
	(gdk_pixbuf_loader_new_with_mime_type): Close the loader
	before unreffing it in the error case.  (#164915, Crispin 
	Flowerday)

2005-01-12  Owen Taylor <otaylor@redhat.com>

	* Makefile.am: 	Use grep | head -n 1 instead of grep -m 1 
	which doesn't work
	with slightly older versions of GNU grep in 
	install-libtool-import-lib rule.

2005-01-08  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.1 ===
	
2005-01-04  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c (DecodeHeader): Error on compressed images with 
	negative height. Also make uncompressed images with data_offset
	!= header_size work.  (#150664, Owen Taylor)

2005-01-02  Matthias Clasen  <mclasen@redhat.com>

	* pixops/pixops.c (bilinear_box_make_weights): Really fix the
	math to make the vectors sum up to 1, making GDK_INTERP_HYPER
	work again. (#162703, Dennis Nezic)

2004-12-27  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-animation.c (gdk_pixbuf_animation_new_from_file) 
	Avoid deadlock. Pointed out by Callum McKenzie.
	
Wed Dec 22 01:17:44 2004  Jonathan Blandford  <jrb@redhat.com>

	* queryloaders.c (main): print out the version and binary name in
	the header comment.  Problem reported by Seth Nickell.
